Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/OverrideChecks/StaticOverride.out
StaticOverride.java:20:1: compiler.err.override.static: (compiler.misc.cant.implement: f(), C, f(), I)
1 error
